// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewEventComponent should match snapshot 1`] = `
<div
  id="root1"
>
  <div
    class="bg-white border-2 font-normal m-2 null p-2 rounded shadow text-black text-left"
    content=""
    matripple=""
  >
    <div
      class="text-base"
    >
      
    </div>
    <div
      class="text-sm"
    >
      
    </div>
    <div
      class="text-sm"
    >
        Attendees 
    </div>
  </div>
</div>
`;

exports[`WeekViewEventComponent should match snapshot 2`] = `
<div
  id="root1"
>
  <div
    class="bg-white border-2 font-normal m-2 p-2 rounded shadow text-black text-left done"
    content=""
    matripple=""
  >
    <div
      class="text-base"
    >
      test
    </div>
    <div
      class="text-sm"
    >
      10:00 AM
    </div>
    <div
      class="text-sm"
    >
       0 Attendees 
    </div>
  </div>
</div>
`;
